--- a/ch03/src/main/webapp/nhead.html
+++ b/ch03/src/main/webapp/nhead.html
@@ -20,8 +20,8 @@ body {
 	width: 630px;
 	height: 100px;
 	margin: 50px auto;
-	
-	background-color: #ddd;	
+	position: relative;
+	background-color: #ddd;
 }
 
 .header .logo, .header .search-box {
@@ -29,33 +29,92 @@ body {
 }
 
 .header .logo {
-	width: 222px;
+	margin-top: 20px; 
+	width : 222px;
 	height: 52px;
 	font-size: 0px;
 	overflow: hidden;
-	background: url('/ch03/images/n_stripe.png') no-repeat 0 -158px/442px 428px;
+	background: url('/ch03/images/n_stripe.png') no-repeat 0 -158px / 442px	428px;
 }
 
-.search-box a, .search-box  input, .search-box .btn-search button   {
-	display: block;
+.search-box {
+	margin-top: 30px;
+	margin-left: 10px; 
+	width : 380px;
+	height: 40px; 
+	border : 2px solid #19ce60;
+	background-color: #fff;
+	position: relative;
+	border: 2px solid #19ce60;
+	width: 380px;
+}
+
+.search-box input {
+	margin-top: 0;
+	width: 290px;
+	height: 100%; 
+	border: none;
+}
+
+input:focus {outline: none;} /* outline 테두리 없애기 */
+
+.search-box #keyboard {
+	width: 21px;
+	height: 70%;
+	position: absolute;
+	top: 7px;
+	right: 65px;
+	font-size: 0px;
+	background: #fff url('/ch03/images/n_stripe.png') no-repeat -397px -260px / 442px 428px;
+}
+
+.search-box #dropdown {
+	width: 12px;
+	height: 45%;
+	position: absolute;
+	top: 10px;
+	right: 45px;
+	
+	
+	
+	font-size: 0px;
+	background: #fff url('/ch03/images/n_stripe.png') no-repeat -166px -159px / 470px 470px;
+}
+
+.search-box .btn-search {
+	position: absolute;
+	bottom: 0;
+	top: 0;
+	right: 0;
+}
+
+.search-box .btn-search button {
+	width: 42px;
+	height: 100%;
+	font-size: 0px;
+	border: none;
+	background: #19ce60 url('/ch03/images/n_stripe.png') no-repeat -488px -21px / 520px	520px;
+	cursor: pointer;
+	
+}
+
+.search-box a, .search-box input, .search-box .btn-search button {
+	display: inline-block;
 }
 </style>
 
 <body>
 	<div class="header">
 		<h1 class="logo">네이버</h1>
-		
+
 		<div class="search-box">
-			<div class="btn-search">
-				<button>검색</button>		
-			</div>
-			<a href="#">드롭다운</a>
-			<a href="#">키보드</a>
 			<input type="text" />
-			
-			
+			<a href="#" id="keyboard"></a> 
+			<a href="#" id="dropdown"></a>
+			<div class="btn-search">
+				<button>검색</button>
+			</div>
 		</div>
 	</div>
-
 </body>
 </html>
