--- a/ch03/src/main/webapp/nhead.html
+++ b/ch03/src/main/webapp/nhead.html
@@ -34,7 +34,7 @@ body {
 	height: 52px;
 	font-size: 0px;
 	overflow: hidden;
-	background: url('/ch03/images/n_stripe.png') no-repeat 0 -158px / 442px	428px;
+	background: url('/ch03/images/n-splite.png') no-repeat 0 -158px / 442px	428px;
 }
 
 .search-box {
@@ -65,7 +65,7 @@ input:focus {outline: none;} /* outline 테두리 없애기 */
 	top: 7px;
 	right: 65px;
 	font-size: 0px;
-	background: #fff url('/ch03/images/n_stripe.png') no-repeat -397px -260px / 442px 428px;
+	background: #fff url('/ch03/images/n-splite.png') no-repeat -397px -260px / 442px 428px;
 }
 
 .search-box #dropdown {
@@ -78,7 +78,7 @@ input:focus {outline: none;} /* outline 테두리 없애기 */
 	
 	
 	font-size: 0px;
-	background: #fff url('/ch03/images/n_stripe.png') no-repeat -166px -159px / 470px 470px;
+	background: #fff url('/ch03/images/n-splite.png') no-repeat -166px -159px / 470px 470px;
 }
 
 .search-box .btn-search {
@@ -93,7 +93,7 @@ input:focus {outline: none;} /* outline 테두리 없애기 */
 	height: 100%;
 	font-size: 0px;
 	border: none;
-	background: #19ce60 url('/ch03/images/n_stripe.png') no-repeat -488px -21px / 520px	520px;
+	background: #19ce60 url('/ch03/images/n-splite.png') no-repeat -488px -21px / 520px	520px;
 	cursor: pointer;
 	
 }
