--- a/ch05/src/main/webapp/tabbox01.html
+++ b/ch05/src/main/webapp/tabbox01.html
@@ -3,24 +3,32 @@
 <head>
 <meta charset="utf-8">
 <title>리스트를 이용한 메뉴 만들기</title>
-<style type="text/css">
-*						{ margin:0; padding:0 }
-body					{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
-</style>
-<script src="" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/ch05/css/tabbox.css" />
 </head>
+<script>
+liSelected = null;
+
+function onTabClicked(li) {
+	if(liSelected != null) {
+		li.className = "";
+	}
+	
+	li.className = "selected";
+	liSelected = li;
+}
+
+</script>
+
 <body>
-<div class="tab-box">
-	<ul>
-        <li>메뉴 1</li>
-        <li>메뉴 2</li>
-        <li>메뉴 3</li>
-        <li>메뉴 4</li>
-        <li>메뉴 5</li>
-    </ul>
-    <div>
-    	탭뷰입니다.
-    </div>
-</div>    
+	<div class="tab-box">
+		<ul>
+			<li onclick="onTabClicked(this)">메뉴5</li>
+			<li onclick="onTabClicked(this)">메뉴4</li>
+			<li onclick="onTabClicked(this)">메뉴3</li>
+			<li onclick="onTabClicked(this)">메뉴2</li>
+			<li onclick="onTabClicked(this)">메뉴1</li>
+		</ul>
+		<div>탭뷰입니다.</div>
+	</div>
 </body>
 </html>
