--- a/ch05/src/main/webapp/tabbox01.html
+++ b/ch05/src/main/webapp/tabbox01.html
@@ -5,18 +5,17 @@
 <title>리스트를 이용한 메뉴 만들기</title>
 <link rel="stylesheet" type="text/css" href="/ch05/css/tabbox.css" />
 </head>
-<script>
+<script type="text/javascript">
 liSelected = null;
-
-function onTabClicked(li) {
-	if(liSelected != null) {
-		li.className = "";
-	}
-	
-	li.className = "selected";
-	liSelected = li;
+   
+function onTabClick(li) {
+   if(liSelected != null){
+      liSelected.className = "";   
+   }   
+   
+   li.className = "selected";
+   liSelected = li;
 }
-
 </script>
 
 <body>
