--- a/ch05/src/main/webapp/tabbox01.html
+++ b/ch05/src/main/webapp/tabbox01.html
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 liSelected = null;
    
-function onTabClick(li) {
+function onTabClicked(li) {
    if(liSelected != null){
       liSelected.className = "";   
    }   
@@ -17,7 +17,6 @@ function onTabClick(li) {
    liSelected = li;
 }
 </script>
-
 <body>
 	<div class="tab-box">
 		<ul>
@@ -30,4 +29,5 @@ function onTabClick(li) {
 		<div>탭뷰입니다.</div>
 	</div>
 </body>
+
 </html>
