--- a/ch06/src/main/webapp/popup.html
+++ b/ch06/src/main/webapp/popup.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-
-
 </head>
 <body>
-	<h1>Pop Up</h1>
+	<h1>Popup Window</h1>
 </body>
 </html>
