--- a/ch06/src/main/webapp/ex01.html
+++ b/ch06/src/main/webapp/ex01.html
@@ -11,6 +11,17 @@ console.log(window.email, email);
 
 setTimeout(function() {
 	var child = window.open("popup.html", "n-popup", "width=600", "height=400");
+	
+	setTimeout(function() {
+		// 자식창의 내용 바꾸기
+		child.document.write("<h1>popup contents changed!</h1>");
+	}, 2000);
+	
+	setTimeout(function() {
+		// 자식창 움직이기
+		child.moveTo(200, 200);
+	}, 2000);
+	
 }, 2000);
 
 </script>
