--- a/ch06/src/main/webapp/ex13.html
+++ b/ch06/src/main/webapp/ex13.html
@@ -3,6 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script>
+/*
+ * 기본 이벤트 동작 막기
+ 	1. anchor: 버튼이나 메뉴로 사용할 때
+ 	2. form: valication, ajax 방식의 submlt 
+ */
+ 
+window.addEventListener("load", function(){
+	document
+		.getElementById('btn-delete')
+		.addEventListener('click', function(event) {
+			event.preventDefault();
+			console.log('비밀번호 입력 다이알로그 팝업 띠우기');
+		});
+});
+</script>
 </head>
 <body>
 	<h1>DOM(Document Object Model)</h1>
