--- a/ch05/src/main/webapp/tabbox02.html
+++ b/ch05/src/main/webapp/tabbox02.html
@@ -5,26 +5,29 @@
 <title>리스트를 이용한 메뉴 만들기</title>
 <link rel="stylesheet" type="text/css" href="/ch05/css/tabbox.css" />
 </head>
-<script type="text/javascript">
-liSelected = null;
-   
-function onTabClicked(li) {
-   if(liSelected != null){
-      liSelected.className = "";   
-   }   
-   
-   li.className = "selected";
-   liSelected = li;
-}
+<script>
+window.addEventListener('load', function() {
+	var divTabBox = document.getElementsByClassName("tab-box")[0];
+	var ul = divTabBox.childNodes[1];
+	var lis = ul.getElementsByTagName('li');
+	
+	Array.prototype.forEach.call(lis, function(li) {
+		li.addEventListener('click', function() {
+			console.log('click');
+		});
+	});
+});
+
+
 </script>
 <body>
 	<div class="tab-box">
 		<ul>
-			<li onclick="onTabClicked(this)">메뉴5</li>
-			<li onclick="onTabClicked(this)">메뉴4</li>
-			<li onclick="onTabClicked(this)">메뉴3</li>
-			<li onclick="onTabClicked(this)">메뉴2</li>
-			<li onclick="onTabClicked(this)">메뉴1</li>
+			<li>메뉴5</li>
+			<li>메뉴4</li>
+			<li>메뉴3</li>
+			<li>메뉴2</li>
+			<li>메뉴1</li>
 		</ul>
 		<div>탭뷰입니다.</div>
 	</div>
