--- a/ch07/src/main/webapp/ex01.html
+++ b/ch07/src/main/webapp/ex01.html
@@ -2,9 +2,37 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<!-- 소스버전(애플리케이션 서버) -->
+<script src="/ch07/jquery/jquery-3.6.3.js"></script>
+
+<!-- 압축버전(애플리케이션 서버 호스팅) -->
+<!-- <script src="/ch07/jquery/jquery-3.6.3.min.js"></script> -->
+
+<!-- 소스버전(CDN 호스팅) -->
+<!-- <script src="https://code.jquery.com/jquery-3.6.3.js"></script> -->
+
+<!-- 압축버전(CDN 호스팅) -->
+<!-- <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script> -->
+
+<script>
+	//버전 확인
+	console.log(jQuery().jquery, $().jquery);
+
+	window.addEventListener('load', function() {
+		// jQuery Object
+		setTimeout(function() {
+			var $obj = jQuery('h1');
+			$obj.css('color', 'red');
+
+			console.log(typeof(jQuery), typeof($obj), "length: " + $obj.length, $obj instanceof Array, $obj instanceof Object);
+		}, 2000);
+
+	});
+</script>
 </head>
 <body>
 	<h1>jQuery 로딩</h1>
+	<h1>jQuery 로딩</h1>
 </body>
 </html>
- 
