--- a/ch07/src/main/webapp/ex05.html
+++ b/ch07/src/main/webapp/ex05.html
@@ -6,6 +6,11 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("#first").css("color", "red");
+		$("#second").css("color", "blue");
+		$("#third").css("color", "green");
+		$("#fourth").css("color", "orange");
+		
 	}, 2000);
 });
 </script>
