--- a/ch07/src/main/webapp/ex18.html
+++ b/ch07/src/main/webapp/ex18.html
@@ -6,7 +6,9 @@
 <script>
 $(function(){
 	setTimeout(function(){
-	}, 1000);
+		$("#p1").html("<strong>1.안녕하세요</strong");
+		console.log($("#p2").html());
+	}, 2000);
 });
 </script>
 </head>
