--- a/ch07/src/main/webapp/ex32.html
+++ b/ch07/src/main/webapp/ex32.html
@@ -6,6 +6,29 @@
 <script type="text/javascript">
 $(function() {
 	setTimeout(function(){
+		/* 
+		$('h2 a').attr('href', 'http://www.douzone.com');
+		$('h2 a').attr('target', '_blank');
+		$('h2 a').attr('title', '우리회사 너네회사');
+		$('h2 a').css('font-soze', '10px'); 
+		*/
+		
+		// 함수 체인
+		/* 
+		$('h2 a')
+			.attr('href', 'http://www.douzone.com')
+			.attr('target', '_blank')
+			.attr('title', '우리회사 너네회사')
+			.css('font-soze', '10px'); 
+		*/		
+
+		$('h2 a')
+			.attr({
+				href: 'http://www.douzone.com',
+				target: '_blank',
+				title: '우리회사 너네회사',
+			})
+			.css('font-soze', '10px');		
 	}, 2000);
 });  
 </script>
