--- a/ch07/src/main/webapp/ex34.html
+++ b/ch07/src/main/webapp/ex34.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="image-viewer.js"></script>
 <script>
 	imageViewer.init();
+	
 </script>
 </head>
 <body>
@@ -17,7 +18,7 @@
 			<button id="btn-slideshow">슬라이드쇼 시작</button>
 		</div>
 		<div>
-			<img/>
+			<img src='images/Penguins.jpg' title='팽귄' />
 		</div>
 	</div>
 </body>
