--- a/ch07/src/main/webapp/ex33.html
+++ b/ch07/src/main/webapp/ex33.html
@@ -46,9 +46,9 @@ li.on {
 <script type="text/javascript">
 	$(function() {
 		$('ul li').mouseover(function() {
-			$(this).addclass("on");
+			$(this).addClass("on");
 		}).mouseout(function() {
-			$(this).removeclass("on");
+			$(this).removeClass("on");
 		});
 	});
 </script>
