--- a/ch07/src/main/webapp/ex09.html
+++ b/ch07/src/main/webapp/ex09.html
@@ -6,8 +6,8 @@
 <script>
 $(function(){
 	setTimeout(function(){
-		$("li > string").css("font-weight", "normal");
-		$("li > div > string").css("color", "blue");
+		$("li > strong").css("font-weight", "normal");
+		$("li > div > strong").css("color", "blue");
 	}, 1000);
 });
 </script>
