--- a/ch07/src/main/webapp/ex13.html
+++ b/ch07/src/main/webapp/ex13.html
@@ -8,7 +8,7 @@ $(function(){
 	setTimeout(function(){
 		$("li[id]").css("color", "red");
 		$('li[class="second"]').css("color", "blue");
-		$('li[class!="second"]').css("font_weight", "bold");
+		$('li[class!="second"]').css("font-weight", "bold");
 	}, 1000);
 });
 </script>
