--- a/ch07/src/main/webapp/ex04.html
+++ b/ch07/src/main/webapp/ex04.html
@@ -7,7 +7,8 @@
 $(function(){
 	setTimeout(function(){
 		var $li = $("li");
-		$li.css("text-", "");
+		$li.css("text-decoration", "underline");
+		
 	}, 2000);
 });
 </script>
