--- a/ch07/src/main/webapp/ex10.html
+++ b/ch07/src/main/webapp/ex10.html
@@ -6,7 +6,7 @@
 <script>
 $(function(){
 	setTimeout(function(){
-		$("#first li#third").css("font-weight", "bold");
+		$("#first, li#third").css("font-weight", "bold");
 	}, 1000);
 });
 </script>
