--- a/ch07/src/main/webapp/ex32.html
+++ b/ch07/src/main/webapp/ex32.html
@@ -19,7 +19,7 @@ $(function() {
 			.attr('href', 'http://www.douzone.com')
 			.attr('target', '_blank')
 			.attr('title', '우리회사 너네회사')
-			.css('font-soze', '10px'); 
+			.css('font-size', '10px'); 
 		*/		
 
 		$('h2 a')
@@ -28,7 +28,7 @@ $(function() {
 				target: '_blank',
 				title: '우리회사 너네회사',
 			})
-			.css('font-soze', '10px');		
+			.css('font-size', '10px');		
 	}, 2000);
 });  
 </script>
